--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-big-calendar": "^0.22.0",
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
+    "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
