--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^3.7.0",
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
