--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive-navbar": "^1.0.11",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "semantic-ui-react": "^0.87.3",
     "styled-components": "^4.3.2"
   },
   "scripts": {
